--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -10,3 +10,19 @@ user.active=Active
 user.registered=Registered
 meal.title=Meals
 common.select=Select
+common.save=Save
+common.delete=Delete
+common.filter=Filter
+common.cancel=Cancel
+common.update=Update
+meal.addMeal=Add Meal
+meal.fromDate=From Date (inclusive):
+meal.toDate=To Date (inclusive):
+meal.fromTime=From Time (inclusive):
+meal.toTime=To Time (exclusive):
+meal.date=Date
+meal.description=Description
+meal.calories=Calories
+meal.dateTime=Date and Time
+meal.update=Edit meal
+meal.create=Create meal
